# CICD

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
.github/workflows/: cmake.yml
src/: main.cpp
test/: test_Hello.cpp
